--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
 
-    <title>Robert VanScoy</title>
+    <title>Ibrahima SALL</title>
   </head>
 
   <body>
